2006-05-27 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Dialog_Partition_Copy.h,
	  include/GParted_Core.h,
	  include/OperationCopy.h,
	  include/Win_GParted.h,
	  src/Dialog_Partition_Copy.cc,
	  src/GParted_Core.cc,
	  src/OperationCopy.cc,
	  src/Win_GParted.cc: made blocksize settable by the user.

2006-05-26 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: fixed typo (#343015)

2006-05-25 Arangel Angov <ufo@linux.net.mk>

	* Updated mk.po, Macedonian translation.

2006-05-24 Takeshi AIHANA <takeshi.aihana@gmail.com>

	* configure.in: Added 'ja' (Japanese) to ALL_LINGUAS.

2006-05-23 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* Use ped_device_read and ped_device_write instead of 'dd' to copy
	  filesystems.
	  Modified progressdetails to provide more detailed feedback about a
	  process.
	  Basicly these were all changes to the infrastructure to make the
	  incorporation of the 'move-code' a bit easier. 
	
	  ( sorry, not in the mood to list all affected files ;) 

2006-05-13 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* configure.in: bumped to gparted-0.2.5
	  ===================================================

2006-05-13 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Win_GParted.cc: updated copyrightinfo

2006-05-02 Pawan Chitrakar <pchitrakar@gmail.com>

	* ne.po: Added ne ALL_LINGUAS

2006-04-15 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Win_GParted.cc: hide dialogs after setting new disklabel

2006-04-15 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: creating a new partition on a BSD partitiontable
	  failed, causing a segfault when setting the partitiontype. fixed.

2006-04-05 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Dialog_Partition_Copy.cc: only allow growing of copy if there is
	  grow support for the filesystem.
	* src/reiser4.cc: added support for copying reiser4 filesystems

2006-04-05 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* src/GParted_Core.cc: modified warning