@@ -1,3 +1,12 @@
+2006-05-31 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/GParted_Core.h,
+	  src/GParted_Core.cc,
+	  src/ext2.cc: added movesupport, atm in experimental state and needs
+	  lots of cleaning. only enabled for ext2, but should work for all
+	  filesystems.
+	* src/DialogFeatures.cc: added alternating rowcolours (see #342682)
+
 2006-05-27 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* include/Dialog_Partition_Copy.h,
